# tinybear

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml  pytest.yml
api/: index.html
docs/: api.md  getting_started.md  index.md  usage.md
getting_started/: index.html
search/: search_index.json
tests/: paths.py  test_csv_xls.py  test_helpers.py  test_html_from_docx.py  test_html_validate.py  test_json_toml_yaml.py  test_txt.py
tests/test_data/: csv_doculects_with_duplicate_values.csv  csv_doculects_with_incomplete_rows.csv  toml_OK_simple.toml  toml_bad_syntax.toml
tests/test_data/html/from_docx/: default_style.docx
tinybear/: 404.html  _paths.py  csv_xls.py  docx.py  index.html  json_toml_yaml.py  txt.py
tinybear/api/: index.html
tinybear/getting_started/: index.html
tinybear/html/: from_docx.py  validate_html.py
tinybear/usage/: index.html
usage/: index.html
