[tool.black]
line-length = 99
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 99

[tool.mypy]
exclude = ["tests", "setup.py"]
ignore_missing_imports = true
python_version = "3.9"
strict = true
disallow_untyped_calls = false
warn_return_any = false

[[tool.mypy.overrides]]
module = [
  "tests.*"
]
ignore_errors = true

[tool.poetry]
name = "tinybear"
version = "0.1.0"
description = ""
authors = ["Dmitry Kolomatskiy <58207913+lemontree210@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.ruff]
line-length = 99
exclude = ["tests"]
per-file-ignores = {"__init__.py" = ["F401"]}
# Pyflakes and pycodestyle Error (included by default without explicit "select"),
# I = isort, N = pep8-naming, PL = pylint, UP = pyupgrade, ERA = eradicate
# A = flake8-builtins, C4 = flake8-comprehensions, DTZ = flake8-datetimez,
# ISC = flake8-implicit-str-concat, T20 = flake8-print, RET = flake8-return, SIM = flake8-simplify,
# ARG = flake8-unused-arguments, PTH = flake8-use-pathlib
select = ["E", "F", "I", "N", "PL", "UP", "ERA", "A", "C4", "DTZ", "ISC", "T20", "RET", "SIM", "ARG", "PTH"]
# Ignore: A003 (class attribute `id`/`type` is shadowing a python builtin) because class attributes don't really shadow Python builtins
ignore = ["A003"]
target-version = "py39"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


